--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-emoji-picker": "^1.0.13",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.26.0",
