--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "^5.0.1",
+    "react-swipeable": "^7.0.1",
     "styled-components": "^6.1.12",
     "swiper": "^11.1.12",
     "web-vitals": "^2.1.4",
